syntax = "proto3";

package trancat_proto;

message Rgb {
  uint32 r = 1;
  uint32 g = 2;
  uint32 b = 3;
}

message Rgba {
  uint32 r = 1;
  uint32 g = 2;
  uint32 b = 3;
  double a = 4;
}

message Color {
  oneof color {
    string str_color = 1;
    Rgba rgba = 2;
    Rgb rgb = 3;
  }
}

message RenderSettings {
  double width = 1;
  double height = 2;
  double padding = 3;
  double line_width = 4;
  double stop_radius = 5;
  uint32 bus_label_font_size = 6;
  double bus_label_offset_x = 7;
  double bus_label_offset_y = 8;
  uint32 stop_label_font_size = 9;
  double stop_label_offset_x = 10;
  double stop_label_offset_y = 11;
  Color underlayer_color = 12;
  double underlayer_width = 13;
  repeated Color color_palette = 14;
}